finished unit 4, still need a hack

--- a/pages/lesson.ipynb
+++ b/pages/lesson.ipynb
@@ -636,7 +636,9 @@
    "source": [
     "\n",
     "# Unit 4\n",
-    "A while loop is used when you want to repeat a block of code as long as a certain condition is true. For example, you can use a while loop to fix cars in your list until there are no more cars left. Imagine you have a parking lot filled with different cars, and you want to perform a specific task for each car, such as checking their fuel level. This is where a while loop can come in handy. Let's take a look at some Java code:\n"
+    "\n",
+    "Just like how cars can keep moving as long as the engine is running, while loops allow us to repeatedly execute a block of code as long as a certain condition is true. Here's an example with a car-themed scenario:\n",
+    "\n"
    ]
   },
   {
@@ -645,11 +647,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "int carIndex = 0;\n",
-    "while (carIndex < cars.length) {\n",
-    "    Car currentCar = cars[carIndex];\n",
-    "    // Code to check fuel level of currentCar\n",
-    "    carIndex++;\n",
+    "int fuelLevel = 50; // initial fuel level of the car\n",
+    "\n",
+    "while (fuelLevel > 0) { // while there is still fuel\n",
+    "    System.out.println(\"Fuel level: \" + fuelLevel + \" liters\"); // print current fuel level\n",
+    "    fuelLevel -= 10; // decrease fuel level by 10 liters\n",
     "}\n"
    ]
   },
@@ -658,7 +660,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this example, we're using a while loop to iterate through an array of cars. The carIndex variable keeps track of the current car we're processing, and the loop continues as long as there are more cars in the array. The loop body performs the task of checking the fuel level of each car."
+    "In this example, the code inside the while loop will keep executing as long as the fuel level is greater than 0. The fuelLevel variable is decreased by 10 in each iteration, and the current fuel level is printed. Once the fuel level reaches 0 or less, the loop will exit.\n",
+    "Some issues with while loops is that if the loop condition is always true, the loop will never exit and you'll have an infinite loop. This can easily crash a computer server and should be avoided. On the other hand, if the loop conditions are always false, then the loop will never run and the body is skipped. This leads to inefficiencies and larger code file sizes than necessary.\n"
    ]
   },
   {
@@ -666,9 +669,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some issues with while loops is that if the loop condition is always true, the loop will never exit and you'll have an infinite loop. This can easily crash a computer server and should be avoided. On the other hand, if the loop conditions are always false, then the loop will never run and the body is skipped. This leads to inefficiencies and larger code file sizes than necessary.\n",
+    "Next, let's move on to for loops, which allow us to specify the number of times a block of code should be executed. Just like how cars can go through a fixed number of laps on a racetrack, for loops have a fixed number of iterations. Here's an example with a car-themed scenario:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for (int lap = 1; lap <= 5; lap++) { // for 5 laps\n",
+    "    System.out.println(\"Lap \" + lap + \" completed!\"); // print lap number\n",
+    "}\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example, the code inside the for loop will be executed 5 times, as specified by the condition lap <= 5. The lap variable is incremented by 1 in each iteration, and the lap number is printed."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's talk about nested iteration, which is like cars navigating through multiple lanes or roads. Nested iteration involves having one loop inside another loop. Here's an example with a car-themed scenario:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for (int lane = 1; lane <= 3; lane++) { // for 3 lanes\n",
+    "    for (int car = 1; car <= 4; car++) { // for 4 cars in each lane\n",
+    "        System.out.println(\"Lane \" + lane + \", Car \" + car); // print lane and car number\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example, we have a nested for loop, where the outer loop iterates over 3 lanes and the inner loop iterates over 4 cars in each lane. The lane and car variables represent the lane and car numbers, respectively, and their values are printed.\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "Break and continue statements help loops. Break statement will help immediately exit out of the loop. Continue statement jumps to the next iteration. \n",
+    "Break and continue statements help loops too. Break statement will help immediately exit out of the loop. Continue statement jumps to the next iteration. \n",
     "\n",
     "There's also try-catch statement blocks and excepion throwing. Exceptions are signs that something is wrong with the code at runtime and the try-catch statements helps keep the program from crashing. The program tries to run the code assuming it works in the try block and if it catches an exception, it moves to the catch block. Then, there is a finally block that runs afterwards no matter what the try or catch blocks say."
    ]
@@ -679,7 +739,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "code block"
+    "for (int lap = 1; lap <= 5; lap++) { // for 5 laps\n",
+    "    if (lap == 3) {\n",
+    "        System.out.println(\"Car broke down on lap \" + lap + \"!\");\n",
+    "        break; // exit the loop if car breaks down\n",
+    "    } else if (lap == 4) {\n",
+    "        System.out.println(\"Car went off-track on lap \" + lap + \"!\");\n",
+    "        continue; // skip current iteration and move on to next lap\n",
+    "    }\n",
+    "    System.out.println(\"Lap \" + lap + \" completed!\"); // print lap number\n",
+    "}\n"
    ]
   },
   {
@@ -687,7 +756,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's say you have a different list of cars, and you know exactly how many cars are in the list. You want to iterate through the list a specific number of times to perform a certain task on each car. This is where a for loop can be very useful. A common example is often fibbonaci's numbers. "
+    "We have a for loop that iterates over 5 laps. The break statement is used to exit the loop prematurely when the car breaks down on lap 3. The continue statement is used to skip the current iteration and move on to the next lap when the car goes off-track on lap 4. The lap number and corresponding event (completed lap, car broke down, or car went off-track) are printed for each iteration."
    ]
   },
   {
@@ -696,7 +765,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "code block"
+    "public class Car {\n",
+    "    private String make;\n",
+    "    private int year;\n",
+    "\n",
+    "    public Car(String make, int year) {\n",
+    "        this.make = make;\n",
+    "        this.year = year;\n",
+    "    }\n",
+    "\n",
+    "    public void displayCarInfo() {\n",
+    "        System.out.println(\"Make: \" + make);\n",
+    "        System.out.println(\"Year: \" + year);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        try {\n",
+    "            Car car = new Car(\"Toyota\", 2020); // Creating a car object\n",
+    "            car.displayCarInfo(); // Displaying car information\n",
+    "            int speed = 100 / 0; // Trying to divide by zero to simulate an error\n",
+    "        } catch (ArithmeticException e) {\n",
+    "            System.out.println(\"Error: Division by zero!\"); // Catching and handling the exception\n",
+    "        }\n",
+    "    }\n",
+    "}\n"
    ]
   },
   {
@@ -704,16 +798,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sometimes, you may need to perform a task that requires multiple levels of iteration. For example, imagine you're a car dealer, and you have a list of cars with different makes and models. You want to go through each make and model combination to perform some operations. This is where nested iteration comes into play. Nested iteration is when you have one or more loops inside another loop. You can use nested while or for loops to iterate through multiple levels of data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "code block"
+    "The code creats a Car class with a displayCarInfo() method that displays the make and year of the car. Inside the main method, we create a car object and call the displayCarInfo() method. Then, we intentionally try to divide by zero to simulate an error. However, we have a try-catch block that catches the ArithmeticException, which is thrown when dividing by zero. The catch block handles the exception by printing an error message. This demonstrates how try-catch statements can be used to handle and recover from exceptions, just like how a car may encounter unexpected issues on the road and need to be handled appropriately to avoid crashes or breakdowns.\n"
    ]
   }
  ],
