--- a/pages/lesson.ipynb
+++ b/pages/lesson.ipynb
@@ -11,7 +11,9 @@
     "date: 'April 16, 2023'\n",
     "format:\n",
     "  html:\n",
-    "    code-fold: true\n",
+    "    code-fold: false\n",
+    "    highlight-style: dracula\n",
+    "\n",
     "keep-ipynb: true\n",
     "---"
    ]
