fix scavenger hunt

--- a/pages/scavenger.ipynb
+++ b/pages/scavenger.ipynb
@@ -1,14 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
    "source": [
     "---\n",
     "title: Scavenger Hunt\n",
@@ -43,14 +41,13 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "shellscript"
+     "languageId": "java"
     }
    },
    "outputs": [],
    "source": [
     "int x = 56/10*5*4;\n",
-    "\n",
-    "if (x<10){\n",
+    "if (x<10) {\n",
     "    System.out.println(\"extra credit\");\n",
     "}\n",
     "else if (x<= 50){\n",
@@ -80,7 +77,7 @@
    "execution_count": 5,
    "metadata": {
     "vscode": {
-     "languageId": "shellscript"
+     "languageId": "java"
     }
    },
    "outputs": [],
@@ -115,7 +112,7 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "shellscript"
+     "languageId": "java"
     }
    },
    "outputs": [],
@@ -145,7 +142,7 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "shellscript"
+     "languageId": "java"
     }
    },
    "outputs": [],
