change to raw and test toc

--- a/pages/lesson.ipynb
+++ b/pages/lesson.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "---\n",
     "title: Units 1 to 4 Lesson\n",
     "author: Iris Yang\n",
     "date: 'April 16, 2023'\n",
+    "toc: include\n",
     "format:\n",
     "  html:\n",
     "    code-fold: false\n",
@@ -115,37 +116,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
-    "## Hack 1\n",
-    "\n",
-    "Make a code segment that calculates the number of wheels of x number of cars"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "public class Hack1 {\n",
-    "    public static void main(String[] args) {\n",
-    "        \n",
-    "        //calculate cars\n",
-    "\n",
-    "    }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Unit 2\n",
-=======
     "\n",
     "\n",
     "## Unit 2\n",
->>>>>>> 9585f70 (change format of lesson)
     "\n",
     "Unit 2 mostly focuses on objects, classes, methods, and constructors.\n",
     "\n",
