--- a/pages/lesson.ipynb
+++ b/pages/lesson.ipynb
@@ -112,6 +112,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hack 1\n",
+    "\n",
+    "Make a code segment that calculates the number of wheels of x number of cars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public class Hack1 {\n",
+    "    public static void main(String[] args) {\n",
+    "        \n",
+    "        //calculate cars\n",
+    "\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
