--- a/pages/lesson.ipynb
+++ b/pages/lesson.ipynb
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hack 1\n",
+    "### Hack 1\n",
     "\n",
     "Make a code segment that calculates the number of wheels of x number of cars"
    ]
