--- a/pages/scavenger.ipynb
+++ b/pages/scavenger.ipynb
@@ -1,12 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "shellscript"
+     "languageId": "java"
     }
    },
+   "outputs": [],
    "source": [
     "---\n",
     "title: Scavenger Hunt\n",
@@ -74,29 +76,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "java"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "is\n"
+     ]
+    }
+   ],
    "source": [
-    "public static void main(String [] args) {\n",
-    "    String[] words = {\"and\", \"more\", \"is\", \"also\", \"plus\"};\n",
-    "    answer(words);\n",
-    "    System.out.println(answer(words));\n",
+    "public class Q2 {\n",
+    "    public static void main(String[] args) {\n",
+    "        String[] words = {\"also\", \"plus\", \"is\", \"for\", \"and\"};\n",
+    "\n",
+    "        String first = words[0]; // initialize with the first word\n",
+    "\n",
+    "        for (int i = 1; i < words.length; i++) {\n",
+    "            if (words[i].length() < first.length()) {\n",
+    "                first = words[i]; // update shortestWord if a shorter word is found\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "        System.out.println(first);\n",
+    "    }\n",
     "}\n",
     "\n",
-    "public static String answer(String words[]) {\n",
-    "    String first = words[0];\n",
-    "    for (int i = 1 ; i < words.length ; i++) {\n",
-    "        if ((words[i].compareTo(first)) < 0) {\n",
-    "            first = words[i];\n",
-    "        }\n",
-    "    } \n",
-    "    return first;\n",
-    "}\n"
+    "Q2.main(null);\n"
    ]
   },
   {
@@ -192,15 +204,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Bash",
-   "language": "bash",
-   "name": "bash"
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "bash",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "17.0.4+8"
   },
