finish scavenger hunt

--- a/pages/scavenger.ipynb
+++ b/pages/scavenger.ipynb
@@ -1,14 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {
     "vscode": {
      "languageId": "java"
     }
    },
-   "outputs": [],
    "source": [
     "---\n",
     "title: Scavenger Hunt\n",
@@ -22,12 +20,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Welcome to our scavenger hunt!\n",
-    "\n",
-    "We have computers set up across the room with each question. Start at question 1 and make sure to record your answers. The responses will create message and the key to a special prize!"
+    "Directions: Welcome to our introduction to Unit 1-4. We have 5 questions posted around the room.Partner up and grab your phone to write down the output of the code. No laptops. The responses will create message and the key to a special prize! Ask Iris if you have any questions."
    ]
   },
   {
@@ -99,8 +96,7 @@
     "        System.out.println(first);\n",
     "    }\n",
     "}\n",
-    "\n",
-    "Q2.main(null);\n"
+    "Q2.main(null);"
    ]
   },
   {
