finished scavenger hunt

--- a/pages/scavenger.ipynb
+++ b/pages/scavenger.ipynb
@@ -176,17 +176,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 5\n",
-    "\n",
-    "Items whose value does not change are called...\n",
-    "\n",
-    "A. variable (Mr.M's desk)\n",
-    "\n",
-    "B. stay-same (bathroom) \n",
-    "\n",
-    "C. literal (outside) \n",
-    "\n",
-    "D. unvariable (hetvi's backpack)"
+    "## Question 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class Q5 {\n",
+    "    public static void main(String[] args) {\n",
+    "        String[] words = {\"hello\", \"world\", \"Java\", \"try\", \"catch\"};\n",
+    "        String result = \"outside\";\n",
+    "        for (String word : words) {\n",
+    "            try {\n",
+    "                // Attempt some code that might throw an exception\n",
+    "                if (word.length() > 5) {\n",
+    "                    break;\n",
+    "                }\n",
+    "            } catch (Exception e) {\n",
+    "                // Catch any exception and change the result\n",
+    "                result = \"inside\";\n",
+    "            }\n",
+    "        }\n",
+    "        System.out.println(result);\n",
+    "    }\n",
+    "}"
    ]
   }
  ],
