--- a/pages/scavenger.ipynb
+++ b/pages/scavenger.ipynb
@@ -1,14 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
    "source": [
     "---\n",
     "title: Scavenger Hunt\n",
@@ -16,7 +14,9 @@
     "date: 'April 16, 2023'\n",
     "format:\n",
     "  html:\n",
-    "    code-fold: true\n",
+    "    code-fold: false\n",
+    "    highlight-style: dracula\n",
+    "\n",
     "keep-ipynb: true\n",
     "---"
    ]
@@ -195,22 +195,22 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Bash",
-   "language": "bash",
-   "name": "bash"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "bash",
+   "name": "python",
    "pygments_lexer": "java",
-   "version": "17.0.4+8"
+   "version": "3.10.2 (v3.10.2:a58ebcc701, Jan 13 2022, 14:50:16) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
