--- a/pages/lesson.ipynb
+++ b/pages/lesson.ipynb
@@ -51,12 +51,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "There are operators like the modulo operator where the remainder is computed or there's division and multiplication. If you ever want to compare car prices, you can set up a code with scanner input which is also a very common with consoles.\n",
     "\n",
-    "![This is an image](https://github.com/iriisyang/Iris-Yang/blob/master/images/arithmeticoperators.png?raw=true)"
+    "![Arthimetic Operators](https://github.com/iriisyang/Iris-Yang/blob/master/images/arithmeticoperators.png?raw=true)"
    ]
   },
   {
