fix code segment

--- a/pages/lesson.ipynb
+++ b/pages/lesson.ipynb
@@ -34,7 +34,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public class Car {\n",
@@ -63,7 +67,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "import java.util.Scanner;\n",
@@ -92,7 +100,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "int cars = 0; // starting number of cars\n",
@@ -117,7 +129,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public class Hack1 {\n",
@@ -148,7 +164,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public class Car {\n",
@@ -215,7 +235,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public class Car {\n",
@@ -265,7 +289,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public class Acceleration {\n",
@@ -292,7 +320,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "import java.util.Random;\n",
@@ -350,7 +382,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public class Car {\n",
@@ -379,7 +415,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "boolean isEngineRunning = true;\n",
@@ -412,7 +452,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "int speed = 80;\n",
@@ -437,7 +481,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "String weather = \"rainy\";\n",
@@ -464,18 +512,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "car1 and car2 are different objects.\n"
+     ]
+    }
+   ],
    "source": [
-    "Car car1 = new Car(\"Toyota\", \"Camry\");\n",
-    "Car car2 = new Car(\"Toyota\", \"Camry\");\n",
-    "\n",
-    "if (car1 == car2) {\n",
-    "    System.out.println(\"car1 and car2 are the same object.\");\n",
-    "} else {\n",
-    "    System.out.println(\"car1 and car2 are different objects.\");\n",
-    "}"
+    "public class Car2 {\n",
+    "    private String make;\n",
+    "    private String model;\n",
+    "    public Car2(String make, String model) {\n",
+    "        this.make = make;\n",
+    "        this.model = model;\n",
+    "    }\n",
+    "    public static void main(String[] args) {\n",
+    "        Car2 car1 = new Car2(\"Toyota\", \"Camry\");\n",
+    "    Car2 car2 = new Car2(\"Toyota\", \"Camry\");\n",
+    "    if (car1 == car2) {\n",
+    "        System.out.println(\"car1 and car2 are the same object.\");\n",
+    "    } else {\n",
+    "        System.out.println(\"car1 and car2 are different objects.\");\n",
+    "    }\n",
+    "    }\n",
+    "}\n",
+    "Car2.main(null);"
    ]
   },
   {
@@ -489,7 +559,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public static void main(String[] args) {\n",
@@ -530,7 +604,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public class Car {\n",
@@ -605,7 +683,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "int fuelLevel = 50; // initial fuel level of the car\n",
@@ -640,7 +722,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "for (int lap = 1; lap <= 5; lap++) { // for 5 laps\n",
@@ -667,7 +753,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "for (int lane = 1; lane <= 3; lane++) { // for 3 lanes\n",
@@ -693,7 +783,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "for (int lap = 1; lap <= 5; lap++) { // for 5 laps\n",
@@ -721,7 +815,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public class Car {\n",
@@ -779,7 +877,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "17.0.4.1+1"
   },
