--- a/pages/lesson.ipynb
+++ b/pages/lesson.ipynb
@@ -207,7 +207,7 @@
     "\n",
     "You can also use methods to make the object perform certain actions. The method includes the scope which indicates if it is public or private allowing other classes/objects to access it or not. There is also the return type. Void does not return any data. Next is the name of the method which usually describes its action. The parameters include what variables are included in the method. Finally, the body actually performs the action. \n",
     "\n",
-    "![This is an image](https://github.com/iriisyang/Iris-Yang/blob/master/images/methods-in-java.png?raw=true)\n",
+    "![Method Format](https://github.com/iriisyang/Iris-Yang/blob/master/images/methods-in-java.png?raw=true)\n",
     "\n",
     "The method can compare the price of two cars for example. You can create code that outputs the cheaper car when entering the name of the two cars."
    ]
@@ -355,7 +355,7 @@
    "source": [
     "public class Car {\n",
     "    // create constructor\n",
-    "    public void printCarDetails() {\n",
+    "    public String printCarDetails() {\n",
     "        // method to print car details\n",
     "    }\n",
     "}\n"
